# OpenCodeGoPanel

./: .editorconfig  .gitattributes  .gitignore  README.md  RELEASE_NOTES_0.0.1.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: check-js.js
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: login-capability.json  main-capability.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: add_account.toml  backup_local_data.toml  clear_auth.toml  clear_cache.toml  clear_local_data.toml  export_data.toml  extract_cookies_from_webview.toml  generate_report.toml  get_auth_status.toml  get_local_data_status.toml  get_snapshot.toml  get_threshold.toml  list_accounts.toml  open_exports_folder.toml  open_login_window.toml  refresh_now.toml  remove_account.toml  rename_account.toml  save_cookies.toml  set_hotkey.toml  set_mini_badge_window.toml  set_refresh_intervals.toml  set_threshold.toml  set_visibility.toml  switch_workspace.toml
src-tauri/src/: account.rs  auth.rs  cache.rs  client.rs  commands.rs  history.rs  lib.rs  main.rs  maintenance.rs  models.rs  notification_rules.rs  paths.rs  report_generator.rs  scheduler.rs  settings_store.rs  store_io.rs  tray_icon.rs  updater.rs
src/js/: accounts.js  app.js  derive.js  format.js  insights.js  login-helper.js  maintenance.js  models.js  quick-peek.js  settings-diagnostics.js  settings.js  toast.js  trends.js  updater.js  usage.js  workspaces.js
src/styles/: main.css
